--- a/css/style.css
+++ b/css/style.css
@@ -2501,11 +2501,12 @@ li {
 
 .story .story-content .tagline {
   color: #e5af59;
-  font-size: 20px;
+  font-size: 12px;
   font-weight: normal;
-  font-style: italic;
+  /*font-style: italic;*/
   font-family: 'Raleway', sans-serif;
   margin-bottom: 20px;
+  letter-spacing: 1px;
 }
 
 .story .story-content p {
